--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,4 +2,5 @@ eclipse.preferences.version=1
 encoding//includes/classes/cl_country.php=UTF-8
 encoding//includes/languages/DE.inc.php=UTF-8
 encoding/index.php=UTF-8
+encoding/login.php=UTF-8
 encoding/registration.php=UTF-8
