--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
 Options +FollowSymLinks
 RewriteEngine On
-RewriteRule ([a-zA-z]+)\.html$ index.php?content=$1
-RewriteRule product-([0-9]+)\.html$ productdetail.php?product=$1
+RewriteRule ([a-zA-z]+)\.html$ #page=$1
