--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 Options +FollowSymLinks
 RewriteEngine On
-RewriteRule ([a-zA-z]+)\.html$ index.php?_escaped_fragment_=$1
+RewriteRule ([a-zA-z]+)\.html$ index.php?page=$1
