handheld css "finish"

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,7 @@ eclipse.preferences.version=1
 encoding//backend/js/admin.js=UTF-8
 encoding//backend/logic/process_action.php=UTF-8
 encoding//bodys/registration.php=UTF-8
+encoding//css/handheld.css=UTF-8
 encoding//css/style.css=UTF-8
 encoding//includes/classes/cl_country.php=UTF-8
 encoding//includes/classes/cl_customer.php=UTF-8
